GNOME Bugzilla – Bug 704477
gnome-rr: Fix signal prototypes
Last modified: 2013-07-23 17:00:51 UTC
.
Created attachment 249525 [details] [review] gnome-rr: Fix signal prototypes They were missing the object itself.
Review of attachment 249525 [details] [review]: looks good. I might say "types of signal vfuncs in class definition" instead of "signal prototypes" though.
Pushed with a fixed commit message to gnome-3-8 and master.