gnome-rr: Fix types of signal vfuncs

... in the class definition. They were missing the object itself.

https://bugzilla.gnome.org/show_bug.cgi?id=704477